# cg-assignments-24

./: CMakeLists.txt  README.md
A01/: A01.cpp  CMakeLists.txt  figure.hpp
A02/: CMakeLists.txt
A03/: CMakeLists.txt
A04/: CMakeLists.txt  WVP.hpp
A04-2023/: A04-2023.cpp  CMakeLists.txt  projection.hpp
A05/: CMakeLists.txt  Mesh.hpp
A05/modules/: Starter.hpp
A06/: A06.cpp  CMakeLists.txt
A06/modules/: Starter.hpp
A07/: CMakeLists.txt
A07/modules/: Starter.hpp
A08/: A08.cpp  CMakeLists.txt
A08/modules/: Starter.hpp
A08/shaders/: ToonFrag.spv  WardFrag.spv
A09/: CMakeLists.txt  Mesh.hpp
A10/: A10.cpp  CMakeLists.txt
Deliveries/: A10.cpp  Mesh5.hpp  Mesh9.hpp  PhongShader.frag  ToonShader.frag  WVP.hpp  WardShader.frag  cameras.hpp  transforms.hpp
E01/: CMakeLists.txt  testGLM.cpp
E02/: CMakeLists.txt
E04/: CMakeLists.txt  E04.cpp
E04/shaders/: GFFShader.vert  GFFVert.spv  MyFrag.spv  MyShader.frag  MyShader.vert  MyVert.spv  PhongFrag.spv  PhongShader.frag  PhongShader.vert
E05/: CMakeLists.txt  E05.cpp
E05/models/: Sphere.gltf
E05/shaders/: 0 - NormMapShader - Red.frag  1 - NormMapShader - Flat.frag  2 - NormMapShader - Just cosine of Lambert.frag  3 - NormMapShader - Lambert.frag  4 - NormMapShader - Toon.frag  5 - NormMapShader - Just Phong.frag  6 - NormMapShader - Phong.frag  7 - NormMapShader - Blinn.frag  8 - NormMapShader - Red Ambient.frag  9 - NormMapShader - Hemispheric Ambient.frag  NormMapFrag.spv  NormMapShader - Blinn and MyAmbient.frag  NormMapShader.frag
E06/lib/: app.js
E07/: CMakeLists.txt  E07.cpp  Starter.hpp
E07/shaders/: BlinnShader.frag  BlinnShader.vert
E08/: CMakeLists.txt  E08.cpp
E08/modules/: Starter.hpp
E09/: CMakeLists.txt  E09 - Final.cpp  E09.cpp
E09/modules/: Starter.hpp
E09/shaders/: BlinnFrag.spv
