cmake_minimum_required(VERSION 3.28)
project(cg-assignments-24)

# Old assignments
add_subdirectory(A04-2023)

# Add assignments
add_subdirectory(A01)
add_subdirectory(A02)
add_subdirectory(A03)
add_subdirectory(A04)
add_subdirectory(A05)
add_subdirectory(A06)
add_subdirectory(A07)
add_subdirectory(A08)
add_subdirectory(A09)
add_subdirectory(A10)

# Add examples
add_subdirectory(E05)
add_subdirectory(E08)
add_subdirectory(E09)